Displaying message when there are no search results to display.  Search menu removing loading icon when fails to get content.  Alerts should no longer be able to have the X button overlap the content text

--- a/access/src/main/external/static/css/admin/search_results.css
+++ b/access/src/main/external/static/css/admin/search_results.css
@@ -324,6 +324,11 @@ colgroup > .date_added, .column_headers > .date_added > a {
 	width: 16px;
 }
 
+.no_results {
+	font-style: italic;
+	padding: .5em;
+}
+
 /** Batch operations */
 .batch_actions p {
 	display: inline;
